Update style of Login page

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,24 @@
   font-size: large;
 }
 
+.App-login {
+  margin: auto;
+  text-align: center;
+  position:absolute;
+  top:40%;
+  left:40%;
+}
+
+.App-login-header {
+  text-align: right;
+}
+
+.App-login-button {
+  text-align: center;
+  margin: 5px 10px;
+  cursor: pointer;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
