--- a/src/App.css
+++ b/src/App.css
@@ -59,32 +59,82 @@
   font-size: large;
 }
 
+.lobby {
+  text-align: center;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
 /* Modal Content/Box */
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 50%; /* Could be more or less, depending on screen size */
+.lobby-modal-content {
+  background-color: #fefefe;
+  margin: 5% auto; /* 15% from the top and centered */
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-/* The Close Button */
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+.lobby-header {
+  font-size: 32px;
+  font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+.lobby-text {
+  font-size: 24px;
 }
 
-.game-table {
-    margin: auto;
-    border: 4px solid #888;
-    border-collapse: collapse;
+.lobby-space {
+  display: inline-block; 
+  width: 10%;
+}
+
+.lobby-textbox {
+  border: 2px solid #222;
+  width: 90%;
+  text-align: center;
+  padding: 5px;
+  font-size: 24px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  margin-bottom: 10px;
+}
+
+.lobby-button {
+  padding: 5px;
+  border-radius: 5px;
+  border: 2px solid #222;
+  background: #ddd;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 20px;
+}
+
+.lobby-table {
+  margin: auto;
+  border: 2px solid #222;
+  border-collapse: collapse;
+  font-size: 20px;
+}
+
+.lobby-table-header {
+  margin: auto;
+  border: 2px solid #222;
+  border-collapse: collapse;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 5px;
+  color: #222;
+}
+
+.lobby-wide-column {
+  margin: auto;
+  border: 2px solid #222;
+  border-collapse: collapse;
+  width: 300px;
+}
+
+.lobby-narrow-column {
+  margin: auto;
+  border: 2px solid #222;
+  border-collapse: collapse;
+  width: 100px;
 }
