--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@
 .lobby {
   text-align: center;
   position: absolute;
+  width: 100%;
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -100,7 +101,7 @@
   color: #333;
 }
 
-.lobby-header {
+.lobby-header-text {
   font-size: 32px;
   font-weight: bold;
   color: #333;
@@ -177,3 +178,100 @@
   color: #333;
 }
 
+.lobby-navigate-table {
+  margin-left: auto; 
+  margin-right: auto;
+  text-align: center;
+}
+
+.lobby-navigate-column {
+  width: 200px;
+  height: 0px;
+}
+
+.lobby-navigate-button {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin: 5px;
+  border-radius: 5px;
+  border: 2px solid #333;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 22px;
+  background-color: #eca;
+  color: #333;
+  width: 150px;
+}
+
+.lobby-empty-button {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin: 5px;
+  border-radius: 5px;
+  border: 2px solid #fff;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 20px;
+  background-color: #fff;
+  color: #fff;
+}
+
+.lobby-wide-column-borderless {
+  border: 2px solid #fff;
+  border-collapse: collapse;
+  width: 300px;
+  height: 0px;
+  color: #fff;
+}
+
+.lobby-narrow-column-borderless {
+  border: 2px solid #fff;
+  border-collapse: collapse;
+  width: 100px;
+  height: 0px;
+  color: #fff;
+}
+
+.lobby-no-room-text {
+  margin-left: auto; 
+  margin-right: auto;
+  border: 2px solid #fff;
+  border-collapse: collapse;
+  width: 400px;
+  height: 300px;
+  color: #333;
+  font-size: 24px;
+  font-style: italic;
+}
+
+.lobby-container {
+  width: 100%;
+}
+
+.lobby-header {
+  height: 100px;
+}
+
+.lobby-main {
+  height: 350px;
+}
+
+.lobby-footer {
+  height: 140px;
+}
+
+.lobby-logout-button {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin: 5px;
+  border-radius: 5px;
+  border: 2px solid #333;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 20px;
+  background-color: #ebb;
+  color: #333;
+}
