--- a/src/GamePlay.css
+++ b/src/GamePlay.css
@@ -10,7 +10,8 @@ table {
   border-spacing: 0px;
 }
 
-td {
+.TileCell {
+  position: relative;
   padding: 0;
   margin: 0;
   border-width: 0px;
@@ -18,22 +19,50 @@ td {
   width: 180px;
 }
 
-.Cell {
-  position: relative;
-}
-
-.Cell img {
+.TileCell img {
   position: absolute;
   top: 0px;
   left: 0px;
   z-index: 1;
 }
 
-.Cell .Suspect-pos {
+.TileCell .Suspect-pos {
   position: absolute;
   top: 60px;
   left: 60px;
   height: 60px;
   width: 60px;
   z-index: 2;
+}
+
+.DetectiveCell {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  border-width: 0px;
+  height: 180px;
+  width: 180px;
+}
+
+/*.DetectiveCell:hover {
+  background-color: lightslategray;
+}*/
+
+.DetectiveCell img {
+  position: absolute;
+  top: 60px;
+  left: 60px;
+  height: 60px;
+  width: 60px;
+  z-index: 1;
+}
+
+.UnusedCell {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  border-width: 0px;
+  height: 180px;
+  width: 180px;
+  background-color: darkorange;
 }
