--- a/src/GamePlay.css
+++ b/src/GamePlay.css
@@ -135,3 +135,12 @@ table {
   background-color: khaki;
   text-align: center;
 }
+
+.PlayerCell {
+  width: 240px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin: auto;
+  background-color: lightpink;
+  text-align: center;
+}
