--- a/src/GamePlay.css
+++ b/src/GamePlay.css
@@ -71,12 +71,32 @@ table {
   background-color: darkorange;
 }
 
-.PlayerInfo {
+.player1 {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  border-width: 0px;
+  background-color: red;
+}
+
+.player1 img{
+  position: relative;
+  height: 90px;
+  width: 90px;
+}
+
+.player2 {
   position: relative;
   padding: 0;
   margin: 0;
   border-width: 0px;
   background-color: dodgerblue;
+}
+
+.player2 img{
+  position: relative;
+  height: 90px;
+  width: 90px;
 }
 
 .ActionTable {
@@ -91,8 +111,6 @@ table {
 }
 
 .ActionCell img {
-  top: 50px;
-  left: 50px;
   height: 50px;
   width: 50px;
   z-index: 1;
