--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,14 @@
   cursor: pointer;
 }
 
+.App-login-note {
+  margin: auto;
+  text-align: center;
+  position:absolute;
+  text-align: left;
+  font-size: 60%;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
